# openclaw-identity

./: .env  .gitignore  Makefile  README.md  add-gateway.py  docker-compose.yml  fluent.conf  index.ts  myclawprint  pyproject.toml  update-policy.py
cli/: main.py
cli/commands/: gateway.py  identity.py  policy.py  setup.py
cli/utils/: compose.py  policy.py  spire.py
plugin/: index.ts  openclaw.plugin.json  package.json
policy/: openclaw.rego
spire-agent-certs/: agent.crt.pem  agent.key.pem
spire-agent-config/: agent.conf
spire-server-config/: server.conf
spire-server-data/: datastore.sqlite3  datastore.sqlite3-shm  datastore.sqlite3-wal  keys.json
