[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "myclawprint"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
myclawprint = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]
